deploy/vote/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: NodePort
  ports:
    - name: 80-80
      port: 80
      targetPort: 80
      nodePort: 30200
      protocol: TCP
  selector:
    app: vote
